OTAT-464: Fix postman tests (not completed yet)